separated each menu into different html pages

--- a/Tour.html
+++ b/Tour.html
@@ -17,11 +17,11 @@
     <!-- Navbar -->
     <div class="navbar">
         <div class="nav-links">
-            <a href="#home">Home</a>
-            <a href="#tour">Tour</a>
-            <a href="#merch">Merch</a>
-            <a href="#about">About</a>
-            <a href="#contact">Contact</a>
+            <a href="./StageFrightWorking1-2-25">Home</a>
+            <a href="./Tour.html">Tour</a>
+            <a href="./Merch.html">Merch</a>
+            <a href="./About.html">About</a>
+            <a href="./Contact.html">Contact</a>
         </div>
         <div class="cart-icon" onclick="toggleCart()">
             <i class="fas fa-shopping-cart"></i>
@@ -44,13 +44,8 @@
         </div>
     </div>
 
-    <!-- Header Section -->
-    <header>
-        <h1>Stage Fright</h1>
-        <p>The Ultimate Concert Experience</p>
-        <a href="#tour">Buy Tickets</a>
-    </header>
 
+<!-- Map -->
     <div id="tour" class="tour-section">
     <div class="tour-container">
         <h2>Upcoming Tour Dates</h2>
@@ -65,45 +60,11 @@
         </select>
         <div id="showList"></div>
 
-        <!-- Map -->
         <div id="tourMap" class="map-container"></div>
     </div>
 </div>
 
-    <!-- Merch Section -->
-    <section class="merch" id="merch">
-        <h2>Merchandise</h2>
-        <div class="merch-grid">
-            <div class="merch-item">
-                <img src="https://i.imgur.com/QZtd1iG.png" alt="T-Shirt">
-                <h3>T-Shirt</h3>
-                <p>$25</p>
-                 <button onclick="addToCart('Stage Fright T-shirt', 20)">Add to Cart</button>
-            </div>
-            <div class="merch-item">
-                <img src="https://i.imgur.com/qgNOvFE.png" alt="Hoodie">
-                <h3>Hoodie</h3>
-                <p>$40</p>
-                <button onclick="addToCart('Hoodie', 40)">Add to Cart</button>
-            </div>
-            <div class="merch-item">
-                <img src="https://i.imgur.com/4fgNqeE.jpg" alt="Poster">
-                <h3>Poster</h3>
-                <p>$10</p>
-                <button onclick="addToCart('Poster', 10)">Add to Cart</button>
-            </div>
-            <div class="merch-item">
-                <img src="https://i.imgur.com/4viRZeH.png" alt="Vinyl">
-                <h3>Vinyl</h3>
-                <p>$30</p>
-                <button onclick="addToCart('Vinyl', 30)">Add to Cart</button>
-            </div>
-            <div class="merch-item">
-                <img src="https://i.imgur.com/QZtd1iG.png" alt="T-Shirt"><button onclick="addToCart('T-shirt', 20)">Add T-shirt - $20</button>
 
-
-               
-            </div>
         </div>
     </section>
 
