--- a/About.html
+++ b/About.html
@@ -14,7 +14,7 @@
 </head>
 
 <body>
-    <!-- Navbar -->
+    Navbar
     <div class="navbar">
         <div class="nav-links">
             <a href="./StageFrightWorking1-2-25">Home</a>
@@ -44,24 +44,50 @@
         </div>
     </div>
 
+
+        <!-- About Section -->
+        <section class="about" id="about">
+            <h1>About</h1>
+            <h2>The Band Members</h2>
+            <div class="grid">
+                <div class="item">
+                    <img src="./assets/images/singer.jpg" alt="Alex Turner the Lead Vocal">
+                    <h3>Alex Turner</h3>
+                    <p>...</p>
+                     <button onclick="addToCart()">Learn More</button>
+                </div>
+                <div class="item">
+                    <img src="./assets/images/guitarist.png" alt="Jamie Smith the guitarist">
+                    <h3>Jamie Smith</h3>
+                    <p>...</p>
+                    <button onclick="addToCart()">Learn More</button>
+                </div>
+                <div class="item">
+                    <img src="./assets/images/bassist.png" alt="Taylor Green the Bassist">
+                    <h3>Taylor Green</h3>
+                    <p>...</p>
+                    <button onclick="addToCart()">Learn More</button>
+                </div>
+                <div class="item">
+                    <img src="./assets/images/drummer.png" alt="Morgan Lee the Drummer">
+                    <h3>Morgan Lee</h3>
+                    <p>..</p>
+                    <button onclick="addToCart('Vinyl', 30)">Learn More</button>
+                </div>
+          
+            </div>
+        </section>
+
   
 
 
 
-
-
-
-
-
-
-    
 
     <!-- Footer -->
     <footer>
         <p>&copy; 2025 Stage Fright. All rights reserved.</p>
     </footer>
 
-    <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
     <script src="script.js"></script>
 
 
