--- a/Merch.html
+++ b/Merch.html
@@ -47,32 +47,32 @@
     <!-- Merch Section -->
     <section class="merch" id="merch">
         <h2>Merchandise</h2>
-        <div class="merch-grid">
-            <div class="merch-item">
+        <div class="grid">
+            <div class="item">
                 <img src="https://i.imgur.com/QZtd1iG.png" alt="T-Shirt">
                 <h3>T-Shirt</h3>
                 <p>$25</p>
                  <button onclick="addToCart('Stage Fright T-shirt', 20)">Add to Cart</button>
             </div>
-            <div class="merch-item">
+            <div class="item">
                 <img src="https://i.imgur.com/qgNOvFE.png" alt="Hoodie">
                 <h3>Hoodie</h3>
                 <p>$40</p>
                 <button onclick="addToCart('Hoodie', 40)">Add to Cart</button>
             </div>
-            <div class="merch-item">
+            <div class="item">
                 <img src="https://i.imgur.com/4fgNqeE.jpg" alt="Poster">
                 <h3>Poster</h3>
                 <p>$10</p>
                 <button onclick="addToCart('Poster', 10)">Add to Cart</button>
             </div>
-            <div class="merch-item">
+            <div class="item">
                 <img src="https://i.imgur.com/4viRZeH.png" alt="Vinyl">
                 <h3>Vinyl</h3>
                 <p>$30</p>
                 <button onclick="addToCart('Vinyl', 30)">Add to Cart</button>
             </div>
-            <div class="merch-item">
+            <div class="item">
                 <img src="https://i.imgur.com/QZtd1iG.png" alt="T-Shirt"><button onclick="addToCart('T-shirt', 20)">Add T-shirt - $20</button>
 
 
@@ -86,7 +86,6 @@
         <p>&copy; 2025 Stage Fright. All rights reserved.</p>
     </footer>
 
-    <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
     <script src="script.js"></script>
 
 
