--- a/About.html
+++ b/About.html
@@ -48,29 +48,33 @@
         <!-- About Section -->
         <section class="about" id="about">
             <h1>About</h1>
-            <h2>The Band Members</h2>
+            <h2>The Band Members</h2>   
             <div class="grid">
                 <div class="item">
                     <img src="./assets/images/singer.jpg" alt="Alex Turner the Lead Vocal">
                     <h3>Alex Turner</h3>
+                    <p>Lead Vocal</p>
                     <p>...</p>
                      <button onclick="addToCart()">Learn More</button>
                 </div>
                 <div class="item">
                     <img src="./assets/images/guitarist.png" alt="Jamie Smith the guitarist">
                     <h3>Jamie Smith</h3>
+                    <p>Guitarist</p>
                     <p>...</p>
                     <button onclick="addToCart()">Learn More</button>
                 </div>
                 <div class="item">
                     <img src="./assets/images/bassist.png" alt="Taylor Green the Bassist">
                     <h3>Taylor Green</h3>
+                    <p>Bassist</p>
                     <p>...</p>
                     <button onclick="addToCart()">Learn More</button>
                 </div>
                 <div class="item">
                     <img src="./assets/images/drummer.png" alt="Morgan Lee the Drummer">
                     <h3>Morgan Lee</h3>
+                    <p>Drummer</p>
                     <p>..</p>
                     <button onclick="addToCart('Vinyl', 30)">Learn More</button>
                 </div>
