added merch images

--- a/Merch.html
+++ b/Merch.html
@@ -49,32 +49,57 @@
         <h2>Merchandise</h2>
         <div class="grid">
             <div class="item">
-                <img src="https://i.imgur.com/QZtd1iG.png" alt="T-Shirt">
+                <img src="./assets/images/T-Shirt.png" alt="T-Shirt">
                 <h3>T-Shirt</h3>
                 <p>$25</p>
                  <button onclick="addToCart('Stage Fright T-shirt', 20)">Add to Cart</button>
             </div>
             <div class="item">
-                <img src="https://i.imgur.com/qgNOvFE.png" alt="Hoodie">
+                <img src="./assets/images/Hoodie.png" alt="Hoodie">
                 <h3>Hoodie</h3>
                 <p>$40</p>
                 <button onclick="addToCart('Hoodie', 40)">Add to Cart</button>
             </div>
             <div class="item">
-                <img src="https://i.imgur.com/4fgNqeE.jpg" alt="Poster">
+                <img src="./assets/images/Poster.png" alt="Poster">
                 <h3>Poster</h3>
                 <p>$10</p>
                 <button onclick="addToCart('Poster', 10)">Add to Cart</button>
             </div>
             <div class="item">
-                <img src="https://i.imgur.com/4viRZeH.png" alt="Vinyl">
+                <img src="./assets/images/Vinyl.png" alt="Vinyl">
                 <h3>Vinyl</h3>
                 <p>$30</p>
                 <button onclick="addToCart('Vinyl', 30)">Add to Cart</button>
             </div>
-            <div class="item">
-                <img src="https://i.imgur.com/QZtd1iG.png" alt="T-Shirt"><button onclick="addToCart('T-shirt', 20)">Add T-shirt - $20</button>
+            <!-- ADD A CD -->
 
+
+            <!-- Duplicates: --> 
+            <div class="item">
+                <img src="./assets/images/T-Shirt.png" alt="T-Shirt">
+                <h3>T-Shirt</h3>
+                <p>$25</p>
+                 <button onclick="addToCart('Stage Fright T-shirt', 20)">Add to Cart</button>
+            </div>
+            <div class="item">
+                <img src="./assets/images/Hoodie.png" alt="Hoodie">
+                <h3>Hoodie</h3>
+                <p>$40</p>
+                <button onclick="addToCart('Hoodie', 40)">Add to Cart</button>
+            </div>
+            <div class="item">
+                <img src="./assets/images/Poster.png" alt="Poster">
+                <h3>Poster</h3>
+                <p>$10</p>
+                <button onclick="addToCart('Poster', 10)">Add to Cart</button>
+            </div>
+            <div class="item">
+                <img src="./assets/images/Vinyl.png" alt="Vinyl">
+                <h3>Vinyl</h3>
+                <p>$30</p>
+                <button onclick="addToCart('Vinyl', 30)">Add to Cart</button>
+            </div>
 
                
             </div>
