added profile members pages and fixed formating of h2

--- a/About.html
+++ b/About.html
@@ -14,7 +14,7 @@
 </head>
 
 <body>
-    Navbar
+    <!-- Navbar -->
     <div class="navbar">
         <div class="nav-links">
             <a href="./StageFrightWorking1-2-25">Home</a>
@@ -47,36 +47,36 @@
 
         <!-- About Section -->
         <section class="about" id="about">
-            <h1>About</h1>
-            <h2>The Band Members</h2>   
+            <h2>About</h2>
+            <h2 id="band-members">The Band Members</h2>   
             <div class="grid">
                 <div class="item">
                     <img src="./assets/images/singer.jpg" alt="Alex Turner the Lead Vocal">
                     <h3>Alex Turner</h3>
                     <p>Lead Vocal</p>
                     <p>...</p>
-                     <button onclick="addToCart()">Learn More</button>
+                    <a href="./member-profiles/Alex.html"><button>Learn More</button></a>
                 </div>
                 <div class="item">
                     <img src="./assets/images/guitarist.png" alt="Jamie Smith the guitarist">
                     <h3>Jamie Smith</h3>
                     <p>Guitarist</p>
                     <p>...</p>
-                    <button onclick="addToCart()">Learn More</button>
+                    <a href="./member-profiles/Jamie.html"><button>Learn More</button></a>
                 </div>
                 <div class="item">
                     <img src="./assets/images/bassist.png" alt="Taylor Green the Bassist">
                     <h3>Taylor Green</h3>
                     <p>Bassist</p>
                     <p>...</p>
-                    <button onclick="addToCart()">Learn More</button>
+                    <a href="./member-profiles/Taylor.html"><button>Learn More</button></a>
                 </div>
                 <div class="item">
                     <img src="./assets/images/drummer.png" alt="Morgan Lee the Drummer">
                     <h3>Morgan Lee</h3>
                     <p>Drummer</p>
                     <p>..</p>
-                    <button onclick="addToCart('Vinyl', 30)">Learn More</button>
+                    <a href="./member-profiles/Morgan.html"><button>Learn More</button></a>
                 </div>
           
             </div>
