added the text to the about page and created things to change file to track notes and ideas

--- a/About.html
+++ b/About.html
@@ -48,37 +48,64 @@
         <!-- About Section -->
         <section class="about" id="about">
             <h2>About</h2>
+            <div id="band-description">
+                <p>Stage Fright in an electrifying rock bank known for their high-energy performances and unforgettable sound. Formed in 2020, the band has taken the music world by storm with their unique style and dynamic stage presence. With their roots in the vibrant music scenes of New York, the band’s sound is an evocative blend of poetic vulnerability, gritty energy, and intricate musicality. 
+                </p>
+                <p>At its core is frontman Alex Turner, who channels introspection and vulnerability into hauntingly evocative lyrics and performances. Guitarist Jamie Smith brings fiery intensity with his soulful riffs and explosive solos, capturing life’s most powerful emotions in every note. Bassist Taylor Green anchors the band’s sound with his understated yet transformative playing, weaving grooves and counter-melodies that add depth and richness to their music. Completing the group is drummer Morgan Lee, a force of nature behind the kit, whose thunderous rhythms channel raw passion and energy into every beat. Together, the four members of Stage Fright turn their diverse experiences and individual journeys into a unified voice, crafting songs that are as dynamic as they are heartfelt. 
+                </p>
+                <p>Stage Fright is more than a band—it’s a testament to the power of music to transform pain into art, chaos into harmony, and isolation into connection. With each track and every performance, they invite listeners to feel deeply, live boldly, and find solace in the shared human experience.
+                </p>
+           </div>
+
             <h2 id="band-members">The Band Members</h2>   
             <div class="grid">
                 <div class="item">
                     <img src="./assets/images/singer.jpg" alt="Alex Turner the Lead Vocal">
                     <h3>Alex Turner</h3>
-                    <p>Lead Vocal</p>
-                    <p>...</p>
-                    <a href="./member-profiles/Alex.html"><button>Learn More</button></a>
+                    <p class="role">Lead Vocal</p>
+                    <p>Alex Turner, the lead vocalist and lyricist of Stage Fright, is a shy yet charismatic figure. He often...</p>
+                    <a href="./member-profiles/Alex.html"><button class="about-button">Learn More</button></a>
                 </div>
                 <div class="item">
                     <img src="./assets/images/guitarist.png" alt="Jamie Smith the guitarist">
                     <h3>Jamie Smith</h3>
-                    <p>Guitarist</p>
+                    <p class="role">Guitarist</p>
                     <p>...</p>
-                    <a href="./member-profiles/Jamie.html"><button>Learn More</button></a>
+                    <a href="./member-profiles/Jamie.html"><button class="about-button">Learn More</button></a>
                 </div>
                 <div class="item">
                     <img src="./assets/images/bassist.png" alt="Taylor Green the Bassist">
                     <h3>Taylor Green</h3>
-                    <p>Bassist</p>
+                    <p class="role">Bassist</p>
                     <p>...</p>
-                    <a href="./member-profiles/Taylor.html"><button>Learn More</button></a>
+                    <a href="./member-profiles/Taylor.html"><button class="about-button">Learn More</button></a>
                 </div>
                 <div class="item">
                     <img src="./assets/images/drummer.png" alt="Morgan Lee the Drummer">
                     <h3>Morgan Lee</h3>
-                    <p>Drummer</p>
+                    <p class="role">Drummer</p>
                     <p>..</p>
-                    <a href="./member-profiles/Morgan.html"><button>Learn More</button></a>
+                    <a href="./member-profiles/Morgan.html"><button class="about-button">Learn More</button></a>
                 </div>
-          
+            </div>
+
+            <div id="band-met">
+                <h2>How the band met</h2>
+                <p>All four of the members attended the same high school, though they hardly knew each other back then. They shared a reputation as troublemakers, each with their own brand of mischief. Alex, a quiet dreamer, would lose himself in scribbling lyrics during class, oblivious to the lessons. Jamie, always the loudest in the room, could never resist cracking jokes or challenging authority, much to the teachers’ frustration. Taylor, the quiet rebel, preferred the solitude of staircases, where he would sketch or read instead of attending class. And Morgan, fiercely independent, had a knack for landing in detention thanks to a quick temper and an unwillingness to back down from a fight.
+                </p>
+
+                <p>One fateful day, their individual paths converged in the detention room. Tasked with cleaning the band hall—a dusty, echoing space crammed with instruments of every kind—they each gravitated toward a different instrument as if drawn by instinct. Jamie claimed the acoustic guitar, Taylor picked up the bass guitar, and Morgan seized the drumsticks. Alex lingered at the door, watching with curiosity as the others began to play. The chaotic beats and plucked strings seemed to fall into a rhythm, raw but electric.
+                </p>
+
+                <p>For a moment, Alex hesitated, the familiar weight of his stage fright holding him back. Then, softly at first, he began to sing a song they all knew, his voice trembling but full of feeling. The others, catching on, joined in, their music harmonizing in a way none of them had expected. As the final note faded, they froze, staring at each other in stunned silence. Then, as if on cue, they burst into laughter, a shared realization crackling between them: they weren’t just misfits—they were something more.
+                </p>
+
+                <p>From that day forward, they began meeting outside of school to play together. It started with clumsy garage sessions and stolen moments in quiet corners of the neighborhood, their music rough around the edges but full of heart. They played for themselves at first, but soon, others started to take notice. Friends and classmates would crowd around their impromptu performances, drawn by their raw energy and the undeniable chemistry that sparked between them.
+                </p>
+
+                <p>By the time they turned eighteen, they had officially formed their band, Stage Fright—a name chosen as both a nod to Alex’s fear of performing and a declaration of the power they found in facing it together. Their music became their voice, a way to channel their rebellious energy into something bigger than themselves. They weren’t just playing songs; they were telling stories—of their struggles, their triumphs, and the unlikely bond that had brought them together. Stage Fright was no longer just a band—it was a family, forged in the most unexpected of places and ready to take on whatever came next, together.
+                </p>
+
             </div>
         </section>
 
