started contact us page

--- a/Contact.html
+++ b/Contact.html
@@ -45,7 +45,13 @@
     </div>
 
   
-
+    <h2>Contact Us</h2>
+    <p>For bookings, inquires, or customer support, reach out to us:</p>
+    <ul>
+        <li>Email: contact@stagefright.com</li>
+        <li>Phone: (123) 456-7890</li>
+        <li>Social Media: @StageFrightBand</li>
+    </ul>
 
 
 
