added the images to the profile pages

--- a/member-profiles/Alex.html
+++ b/member-profiles/Alex.html
@@ -4,14 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Stage Fright</title>
+    <link rel="stylesheet" href="../profiles.css"/>
 </head>
 <body>
+    <img src="../assets/images/members/Alex 1.jpg" alt="Young Alex looking at a live performance"/>
     <p>Alex Turner, the lead vocalist and lyricist of Stage Fright, is a shy yet charismatic figure. He often retreats into the world of music whenever he needs a means of escape. His first introduction to music was at age 10 when he encountered a live performance in his hometown of Rochester, New York. The raw energy and emotion displayed by the band lit a fire in Alex. His awkwardness grew into quiet rebellion, which made him an ideal frontman for a rock band, though he didn't always feel at ease with the spotlight. His source of inspiration behind his lyrics came from all the feelings of isolation, self-doubt, and pressure he faced during his course of life. He had a distinct, almost haunting voice that could go from fragile and delicate to fiery and intense, which set him apart from other singers in the local scene. Alex frequently battled with insecurity, constantly feeling like an outsider in the music industry. However, this vulnerability became the fuel for his unique vocal style: a mix of delicate falsetto, gritty growls, and passionate delivery that resonated with fans on a personal level.
     </p>
 
+    <img src="../assets/images/members/Alex 2.png" alt="Young Alex writing lyrics in his notebook"/>
     <p>Before becoming the enigmatic frontman of Stage Fright, Alex was a quiet, introspective student navigating the tumultuous waters of school. He wasn’t one to draw attention to himself; in fact, most of his teachers barely noticed him, except when he was caught scribbling in his notebook during class. While others were taking notes or chatting, Alex was busy writing lyrics, fragments of poetry, and observations about the world around him. His notebook became his sanctuary, a place where he could channel the emotions he couldn’t express out loud.
     </p>
 
+    <img src="../assets/images/members/Alex 3.jpg" alr="Alex singing on stage"/>
     <p>Years later, as Stage Fright gained momentum, Alex transformed from a quiet observer to an electrifying presence on stage. The same emotions he once confined to his notebook now surged through his performances, turning raw vulnerability into a magnetic force. He was known for his wild, unpredictable energy and a deep emotional connection with the crowd. At times, his performances veered into the theatrical, blurring the lines between the person he was offstage and the persona he inhabited under the spotlight. His lyrics, often cryptic yet poetic, explored universal themes of love, heartbreak, existential questions, and the turbulent journey of growing up in a world that often felt overwhelming. 
     </p>
 
