--- a/member-profiles/Morgan.html
+++ b/member-profiles/Morgan.html
@@ -4,14 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Stage Fright</title>
+    <link rel="stylesheet" href="../profiles.css"/>
+
 </head>
 <body>
+    <img src="../assets/images/members/Morgan 1.jpg" alt="Morgan listening to music in his room"/>
     <p>Morgan Lee, the drummer of Stage Fright, is the rhythmic heartbeat of the band. Born in the Brooklyn county of New York City, he was frequently exposed to various music genres from the early jazz and blues to the punk and indie rock that originated from the movements of the 70s and 80s. While neither of his parents had occupations as musicians, they both shared a love for classic rock. As a result, Morgan grew up surrounded by music. However, it was his neighbor's drum set that caught Morgan's attention when he was 11 years old. Since then, he spent hours visiting his neighbor and hearing him play the drums. 
     </p>
 
+    <img src="../assets/images/members/Morgan 2.jpg" alt="Morgan mowing the lawn"/>
     <p>In middle school, Morgan’s temper and rebellious streak began to cause trouble. However, his undeniable charisma and quick wit made him impossible to ignore. Teachers called him a “force of nature,” while classmates admired his unshakable confidence. With a fiery personality and a sharp tongue, he quickly earned a reputation for being fearless, often stepping in to defend others who couldn’t stand up for themselves. It was this protective streak, combined with a tendency to settle disputes with fists rather than words, that frequently landed Morgan in detention.
     </p>
 
+    <img src="../assets/images/members/Morgan 3.jpg" alt="Morgan playing drums in his garage"/>
     <p>At the age of 14, Morgan picked up his first drum kit, a secondhand set he saved up for by mowing lawns and doing odd jobs around his neighborhood. He started teaching himself the basics, banging away on the set in his garage, never bothering with traditional lessons. To him, it wasn’t about perfection; it was about feeling the rhythm, the power, and the release of the drums. Over time, Morgan learned to transform his fiery temper and violent tendencies into something far more powerful: a deep love for rhythm and movement. Drumming became his salvation, a way to channel the chaos within into something meaningful. The raw energy that once erupted in fights now poured into every beat he played, turning disorder into harmony and unbridled emotion into art.
     </p>
 
