--- a/member-profiles/Taylor.html
+++ b/member-profiles/Taylor.html
@@ -4,17 +4,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Stage Fright</title>
+    <link rel="stylesheet" href="../profiles.css"/>
+
 </head>
 <body>
+    <img src="../assets/images/members/Taylor 1.jpg" alt="Young Taylor playing a bass guitar for the first time with a punk band"/>
     <p>Taylor Green, the bassist of Stage Fright, is the quiet force that anchors the band's sound. Born by the ocean in Long Beach, New York, he provides the groove and the grounding with his calm but confident bass sound. His first encounter with a bass guitar was in middle school. A friend introduced him to a local punk band, and during one of their rehearsals, the bassist was absent. Taylor, curious about the role of bass in music, picked up the instrument and began playing along. It was an instant connection. The deep, rhythmic thrum of the bass felt like the pulse of the music, and he was captivated. On his 13th birthday, Taylor was gifted his very own bass guitar, and since then, the bass guitar has never left his side. He used every waking moment learning every bassline he could find, sneaking into clubs to watch bands play, and dreaming of bigger stages. For Taylor, the bass was not just an instrument; it was a way to feel connected to the heartbeat of music itself.
     </p>
 
+    <img src="../assets/images/members/Taylor 2.jpg" alt="Taylor receiving a bass guitar on his 13th birthday"/>
     <p>Unlike many bassists who focus on being the rhythm section, Taylor was known for his ability to blend seamlessly between the rhythm and melody, often providing subtle counter-melodies that enriched the band’s sonic landscape. He wasn’t just holding down the low end; he was contributing to the band’s emotional depth, making every song feel fuller and more textured.
     </p>
 
     <p>Offstage, Taylor is known for his love of vintage jazz records, his collection of rare bass guitars, and his fascination with architecture. While his bandmates are often in the spotlight, Taylor spends his free time reading, sketching, or exploring the city’s hidden corners, always looking for inspiration in the quiet moments that others might overlook.
     </p>
 
+    <img src="../assets/images/members/Taylor 3.jpg" alt="Taylor reading a book on a staircase"/>
     <p>Today, Taylor Green is the backbone of Stage Fright, a bassist whose understated presence has become crucial to the band’s signature sound. While he might never seek the spotlight, his basslines speak volumes, leaving a lasting impact on everyone who hears them. For Taylor, it’s not about being seen or heard—it's about creating something that feels true, something that resonates deep within.
     </p>
 </body>
