--- a/Tour.html
+++ b/Tour.html
@@ -29,8 +29,8 @@
         </div>
     </div>
 
-    <!-- Cart Sidebar -->
-    <div class="cart-sidebar" id="cartSidebar">
+     <!-- Cart Sidebar -->
+     <div class="cart-sidebar" id="cartSidebar" style="transform: translateX(100%);">
         <div class="cart-header">
             <h3>Shopping Cart</h3>
             <button onclick="toggleCart()">&times;</button>
@@ -76,7 +76,7 @@
     <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
     <script src="script.js"></script>
 
-
+    
 </body>
 
 </html>
