about css and nuzhat stuff

--- a/About.html
+++ b/About.html
@@ -10,6 +10,8 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap">
 
     <link rel="stylesheet" href="./style.css"/>
+    <link rel="stylesheet" href="./about.css"/>
+
 
 </head>
 
@@ -17,7 +19,7 @@
     <!-- Navbar -->
     <div class="navbar">
         <div class="nav-links">
-            <a href="./StageFrightWorking1-2-25">Home</a>
+            <a href="./StageFright">Home</a>
             <a href="./Tour.html">Tour</a>
             <a href="./Merch.html">Merch</a>
             <a href="./About.html">About</a>
@@ -49,11 +51,8 @@
         <section class="about" id="about">
             <h2>About</h2>
             <div id="band-description">
-                <p>Stage Fright in an electrifying rock bank known for their high-energy performances and unforgettable sound. Formed in 2020, the band has taken the music world by storm with their unique style and dynamic stage presence. With their roots in the vibrant music scenes of New York, the band’s sound is an evocative blend of poetic vulnerability, gritty energy, and intricate musicality. 
-                </p>
-                <p>At its core is frontman Alex Turner, who channels introspection and vulnerability into hauntingly evocative lyrics and performances. Guitarist Jamie Smith brings fiery intensity with his soulful riffs and explosive solos, capturing life’s most powerful emotions in every note. Bassist Taylor Green anchors the band’s sound with his understated yet transformative playing, weaving grooves and counter-melodies that add depth and richness to their music. Completing the group is drummer Morgan Lee, a force of nature behind the kit, whose thunderous rhythms channel raw passion and energy into every beat. Together, the four members of Stage Fright turn their diverse experiences and individual journeys into a unified voice, crafting songs that are as dynamic as they are heartfelt. 
-                </p>
-                <p>Stage Fright is more than a band—it’s a testament to the power of music to transform pain into art, chaos into harmony, and isolation into connection. With each track and every performance, they invite listeners to feel deeply, live boldly, and find solace in the shared human experience.
+                <p>Stage Fright in an electrifying rock bank known for their high-energy performances and unforgettable sound. With their roots in the vibrant music scenes of New York, the band’s sound is an evocative blend of poetic vulnerability, gritty energy, and intricate musicality. 
+                Stage Fright is more than a band—it’s a testament to the power of music to transform pain into art, chaos into harmony, and isolation into connection. With each track and every performance, they invite listeners to feel deeply, live boldly, and find solace in the shared human experience.
                 </p>
            </div>
 
@@ -109,6 +108,7 @@
             </div>
         </section>
 
+
   
 
 
@@ -125,3 +125,4 @@
 </body>
 
 </html>
+
