has frq, updated about pg, and better formatting

--- a/Contact.html
+++ b/Contact.html
@@ -17,7 +17,7 @@
     <!-- Navbar -->
     <div class="navbar">
         <div class="nav-links">
-            <a href="./StageFrightWorking1-2-25">Home</a>
+            <a href="./StageFright.html">Home</a>
             <a href="./Tour.html">Tour</a>
             <a href="./Merch.html">Merch</a>
             <a href="./About.html">About</a>
