--- a/Contact.html
+++ b/Contact.html
@@ -17,7 +17,7 @@
     <!-- Navbar -->
     <div class="navbar">
         <div class="nav-links">
-            <a href="./StageFright.html">Home</a>
+            <a href="./index.html">Home</a>
             <a href="./Tour.html">Tour</a>
             <a href="./Merch.html">Merch</a>
             <a href="./About.html">About</a>
